--- a/Nos_fichiers/config2.yaml
+++ b/Nos_fichiers/config2.yaml
@@ -1,25 +1,37 @@
 // Constantes pour les touches
-KRight               : x
-KLeft                : w
-KShoot               :   
+KRight      : x
+KLeft       : w
+KShoot      :   
 
 //  Constantes liées à l envahisseur
 KInvadersColor 		 : KJaune
 KInsideInvader       : W
 KMissile             : T
 KBegInvader 		 : 0
-KInvadersSize    	 : 5
+KInvadersSize 	     : 5
 KMissileRatio 		 : 2
 
 // Constantes liées au joueur
 KInsideMe            : A
 KTorpedo			 : |
 KMyColor			 : KVert
-KMySize          	 : 4
+KMyLife    	         : 4
 KRatioMeInvaders 	 : 4
-KBegMe				 : 1
+KBegMe				 : 5
 
-// Constantes liées à l'eapace (l'écran)
-KSizeLine   		 : 20
-KSizeSpace  		 : 20
+// Constantes liées à l'eapace  de jeu (l'écran)
+KSizeLine   		 : 10
+KSizeSpace  		 : 10
 KEmpty               : 
+
+// Constantes liées au fonctionalité
+KBonus     : *
+KRatio     : 60
+KMur       : =
+
+// Adresse des ressources audio en ligne ou sur le PC (pour un fichier present du le PC le format est ( files:///ADRESSE_VERS_LE_FICHIERS )
+KIntroSound       : http://216.227.134.162/ost/space-invaders-gbc-gb-/xanousrrne/01-title-screen.mp3
+KHistoSound       : http://cdn.frustra.org/sounds/sound/vo/core01/space21.mp3
+KGameSound        : http://216.227.134.162/ost/space-invaders-gbc-gb-/tmymegclzp/12-invader-homeworld.mp3
+KGameOverSound    : http://216.227.134.162/ost/pokemon-yellow-blue-red-gb-/oacqzkmnml/01-opening-part-1-.mp3
+KEndSound         : http://i1.theportalwiki.net/img/1/1e/Portal2-13-Want_You_Gone_RT.mp3
